--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <p id="general-error" class="error">Заполните все поля!</p>
+                        <p id="general-error" class="invalid-feedback">Заполните все поля!</p>
                         <form>
                             <div class="mb-3">
                                 <div class="row">
@@ -83,19 +83,19 @@
                                         Не в браке
                                     </label>
                                 </div>
-                                <p id="error-married" class="error">Некорректный статус</p>
+                                <p id="error-married" class="invalid-feedback">Некорректный статус</p>
                             </div>
                             <div class="mb-3">
                                 <div class="row">
                                     <div class="col">
                                         <label for="staff-name" class="col-form-label">Имя:</label>
                                         <input type="text" class="form-control" id="staff-name" name="name">
-                                        <p id="error-name" class="error">Некорректное имя</p>
+                                        <p id="error-name" class="invalid-feedback">Некорректное имя</p>
                                     </div>
                                     <div class="col">
                                         <label for="staff-date" class="col-form-label">Дата:</label>
                                         <input type="date" class="form-control" id="staff-date" name="employment_at">
-                                        <p id="error-date" class="error">Некорректная дата</p>
+                                        <p id="error-date" class="invalid-feedback">Некорректная дата</p>
                                     </div>
                                 </div>
                             </div>
@@ -104,12 +104,12 @@
                                     <div class="col">
                                         <label for="staff-surname" class="col-form-label">Фамилия:</label>
                                         <input type="text" step="100" class="form-control" id="staff-surname" name="surname">
-                                        <p id="error-surname" class="error">Некорректная фамилия</p>
+                                        <p id="error-surname" class="invalid-feedback">Некорректная фамилия</p>
                                     </div>
                                     <div class="col">
                                         <label for="staff-company" class="col-form-label">Компания:</label>
                                         <input type="text" class="form-control" id="staff-company" name="company">
-                                        <p id="error-company" class="error">Некорректное наименование</p>
+                                        <p id="error-company" class="invalid-feedback">Некорректное наименование</p>
                                     </div>
                                 </div>
                             </div>
@@ -118,12 +118,12 @@
                                     <div class="col">
                                         <label for="staff-salary" class="col-form-label">Зарплата:</label>
                                         <input type="number" step="100" class="form-control" id="staff-salary" name="salary">
-                                        <p id="error-salary" class="error">Некорректная зарплата</p>
+                                        <p id="error-salary" class="invalid-feedback">Некорректная зарплата</p>
                                     </div>
                                     <div class="col">
                                         <label for="staff-age" class="col-form-label">Возраст:</label>
                                         <input type="number" class="form-control" id="staff-age" name="age">
-                                        <p id="error-age" class="error">Некорректный возраст</p>
+                                        <p id="error-age" class="invalid-feedback">Некорректный возраст</p>
                                     </div>
                                 </div>
                             </div>
