--- a/index.html
+++ b/index.html
@@ -59,22 +59,11 @@
                         </tr>
                     </thead>
                     <tbody id="table-body" >
-
-                        <template v-if="fillterList.length">
-                            <template v-for="user in showUsers">
-                                <tr>
-                                    <td v-for="td in user">{{td}}</td>
-                                    <td><button class="delButton" v-on:click="deleteUser">Удалить</button></td>
-                                </tr>
-                            </template>
-                        </template>
-                        <template v-else> 
-                            <template v-for="user in showUsers">
-                                <tr>
-                                    <td v-for="td in user">{{td}}</td>
-                                    <td><button class="delButton" v-on:click="deleteUser">Удалить</button></td>
-                                </tr>
-                            </template>
+                        <template v-for="user in showUsers">
+                            <tr>
+                                <td v-for="td in user">{{td}}</td>
+                                <td><button class="delButton" v-on:click="deleteUser">Удалить</button></td>
+                            </tr>
                         </template>
                     </tbody>
                 </table>
@@ -113,13 +102,13 @@
                                         <label class="col-form-label">Статус:</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="married" id="married" value="Да" checked>
+                                        <input class="form-check-input" v-model="newUser.married" type="radio" name="married" id="married" value="Да" checked>
                                         <label class="form-check-label" for="married">
                                             В браке
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="married" id="notMarried" value="Нет">
+                                        <input class="form-check-input" v-model="newUser.married" type="radio" name="married" id="notMarried" value="Нет">
                                         <label class="form-check-label" for="notMarried">
                                             Не в браке
                                         </label>
